# IntelliHybrid

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  MARKETING.md  README.md  intellihybrid.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.template.yaml
docs/: AI_FEATURES.md  HOW_TO_USE.md  SECURITY.md  ZENODO_AND_RELEASE_GUIDE.md  ai-demo.html
examples/: basic_setup.py
src/: __init__.py
src/ai/: __init__.py  assistant.py  query_engine.py  schema_intelligence.py  server.py
src/aws/: dynamodb.py
src/bridge/: sync.py
src/core/: config_loader.py
src/onprem/: database.py  vpn.py
tests/: test_intellihybrid.py
